# gaitmap-bench

./: .gitignore  .readthedocs.yml  .ruff.toml  README.md  _tasks.py  pyproject.toml
.github/workflows/: publish.yml  test-and-lint.yml
.run_configs/fau_woody/: README.md  config.json  config_massive_parallel.json  executor.sh  executor_massive_parallel.sh  executor_short.sh  force_copy_local.sh  result_sync.sh
docs/: .gitignore  conf.py  index.rst
docs/_static/: custom.css
docs/challenges/: index.rst
docs/guides/: add_new_challenge.rst  add_new_entry.rst  dev_setup.rst  index.rst  running_challenges.rst
docs/logos/: create_all_logos.sh
docs/modules/: index.rst
docs/sphinxext/: githublink.py
entries/gaitmap_algos/: .ruff.toml  _tasks.py  gaitmap_bench.toml  pyproject.toml
entries/gaitmap_algos/gaitmap_algos/full_pipeline/mad_classic/: __init__.py  kluge_2017.py  sensor_position_comparison_instep.py
entries/gaitmap_algos/gaitmap_algos/full_pipeline/mad_default/: kluge_2017.py
entries/gaitmap_algos/gaitmap_algos/full_pipeline/mad_modern/: __init__.py  kluge_2017.py  kluge_2017_optimized_zupt.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_optimized_zupt.py
entries/gaitmap_algos/gaitmap_algos/full_pipeline/mad_optimized/: kluge_2017.py
entries/gaitmap_algos/gaitmap_algos/spatial_parameters/: _egait_adidas_region_integration_base.py  _egait_adidas_stride_integration_base.py  _egait_parameter_validation_2013_base.py  _egait_parameter_validation_2013_region_integration_base.py  _egait_parameter_validation_2013_stride_integration_base.py  _sensor_pos_region_integration_base.py  _sensor_pos_stride_integration_base.py
entries/gaitmap_algos/gaitmap_algos/spatial_parameters/madgwick_rts_kalman/: __init__.py  egait_adidas_2014.py  egait_adidas_2014_default.py  egait_adidas_2014_forced_zupt.py  egait_adidas_2014_forced_zupt_default.py  egait_parameter_validation_2013.py  egait_parameter_validation_2013_default.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/spatial_parameters/rts_kalman/: __init__.py  egait_adidas_2014.py  egait_adidas_2014_default.py  egait_adidas_2014_forced_zupt.py  egait_adidas_2014_forced_zupt_default.py  egait_parameter_validation_2013.py  egait_parameter_validation_2013_default.py  sensor_position_comparison_forced_zupt_default.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/spatial_parameters/simple_integration/: __init__.py  egait_adidas_2014.py  egait_adidas_2014_default.py  egait_parameter_validation_2013.py  egait_parameter_validation_2013_default.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/spatial_parameters/simple_integration_madgwick/: __init__.py  egait_adidas_2014.py  egait_adidas_2014_default.py  egait_parameter_validation_2013.py  egait_parameter_validation_2013_default.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/stride_segmentation/barth_dtw/: _shared.py  egait_segmentation_validation_2014.py  sensor_position_comparison_instep.py
entries/gaitmap_algos/gaitmap_algos/stride_segmentation/dtw/: _egait_segmentation_validation_2014.py  _sensor_position_comparison_instep.py
entries/gaitmap_algos/gaitmap_algos/stride_segmentation/dtw/barth_dtw/: __init__.py  egait_segmentation_validation_2014.py  egait_segmentation_validation_2014_default.py  egait_segmentation_validation_2014_original_label.py  egait_segmentation_validation_2014_original_label_default.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/stride_segmentation/dtw/constrained_barth_dtw/: __init__.py  egait_segmentation_validation_2014.py  egait_segmentation_validation_2014_default.py  egait_segmentation_validation_2014_original_label.py  egait_segmentation_validation_2014_original_label_default.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_default.py
entries/gaitmap_algos/gaitmap_algos/stride_segmentation/roth_hmm/: __init__.py  _shared.py  egait_segmentation_validation_2014.py  egait_segmentation_validation_2014_default.py  egait_segmentation_validation_2014_original_label_default.py  egait_segmentation_validation_2014_original_label_trained.py  egait_segmentation_validation_2014_trained.py  sensor_position_comparison_instep.py  sensor_position_comparison_instep_default.py  sensor_position_comparison_instep_trained.py
examples/: README.rst
gaitmap-bench/: README.md  _tasks.py  pyproject.toml
gaitmap-bench/docs/: conf.py  index.rst
gaitmap-bench/docs/challenges/: index.rst
gaitmap-bench/docs/challenges/Stride Segmentation/: category_index.rst
gaitmap-bench/docs/challenges/Stride Segmentation/EgaitSegmentationValidation2014/: index.md
gaitmap-bench/docs/guides/: dev_setup.rst
gaitmap-bench/gaitmap_bench/: __init__.py  _bench_runner.py  _challenge_utils.py  _config.py  _utils.py  docu_utils.py
gaitmap-bench/tests/: test_hacky_config_restore.py  test_result_loading.py
gaitmap-challenges/: .gitignore  .ruff.toml  README.md  _tasks.py  pyproject.toml
gaitmap-challenges/gaitmap_challenges/: __init__.py  _base.py  challenge_base.py  config.py  results.py
gaitmap-challenges/gaitmap_challenges/full_pipeline/: _utils.py  kluge_2017.py  sensor_position_comparison_instep.py
gaitmap-challenges/gaitmap_challenges/spatial_parameters/: _utils.py  egait_adidas_2014.py  egait_parameter_validation_2013.py  sensor_position_comparison_instep.py
gaitmap-challenges/gaitmap_challenges/stride_segmentation/: _utils.py  egait_segmentation_validation_2014.py  egait_segmentation_validation_2014_original_label.py  sensor_position_comparison_instep.py
gaitmap-challenges/gaitmap_challenges/visualization/: __init__.py  _basic_plots.py  _box_plot.py  _residual_plot.py  _utils.py
gaitmap-challenges/tests/: .ruff.toml  test_basic_plots.py  test_save_run.py
gaitmap-paper/: README.md
results/: .gitignore
(+216 files in other folders)
