[tool.poetry]
name = "gaitmap-bench-meta"
version = "0.1.0"
description = "META REPO FILE FOR GAITMAP-BENCH AND CHALLENGES. DO NOT INSTALL!"
readme = "README.md"
authors = ["Arne Küderle"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gaitmap-bench = {path = "gaitmap-bench", develop = true}
gaitmap-challenges = {path = "gaitmap-challenges", develop = true}
# We add this for development, as this allows us to simply work on the gaitmap algo entries
gaitmap-algos = {path = "entries/gaitmap_algos", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
poethepoet = "^0.16.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ipython = "^8.8.0"
ipympl = "^0.9.2"
ipykernel = "^6.20.2"
sphinx-book-theme = "^1.0.1"
myst-nb = "^0.17.2"
sphinx-design = "^0.4.1"
myst-nb-bokeh = "^1.1.0"
ruff = "^0.0.260"
sphinx = "^5"
jupytext = "^1.14.6"
nbstripout = "^0.6.1"


[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''