[tool.poetry]
name = "gaitmap-bench-meta"
version = "0.1.0"
description = "META REPO FILE FOR GAITMAP-BENCH AND CHALLENGES. DO NOT INSTALL!"
readme = "README.md"
authors = ["Arne Küderle"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gaitmap-bench = {path = "gaitmap-bench", develop = true}
gaitmap-challenges = {path = "gaitmap-challenges", develop = true}


[tool.poetry.group.gaitmap_algos]
optional = true

[tool.poetry.group.gaitmap_algos.dependencies]
# We add this for development, as this allows us to simply work on the gaitmap algo entries
gaitmap-algos = {path = "entries/gaitmap_algos", develop = true}

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ipython = "^8.8.0"
ipympl = "^0.9.2"
ipykernel = "^6.20.2"
sphinx-book-theme = "^1.0.1"
myst-nb = "^0.17.2"
sphinx-design = "^0.4.1"
myst-nb-bokeh = "^1.1.0"
ruff = "^0.0.260"
sphinx = "^5"
jupytext = "^1.14.6"
nbstripout = "^0.6.1"
black = {version = "^23.3.0", extras = ["jupyter"]}


[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
    | \.ipynb_checkpoints
    | \_debug
  )/
)
'''

[tool.poe.tasks]
_format_black = "black ."
_format_ruff = "ruff . --fix-only --exit-zero"
format = ["_format_black", "_format_ruff", "_format_black"]
lint = { cmd = "ruff gaitmap-challenges gaitmap-bench entries --fix", help = "Lint all files with ruff." }
test = { cmd = "pytest --cov=gaitmap-challenges --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
version = { script = "_tasks:task_update_version()" }
bump_dev = { script = "_tasks:task_bump_all_dev()" }