[tool.poetry]
name = "gaitmap-bench"
version = "0.1.0"
description = "Repo to collect reproducible benchmarks for human gait analysis"
authors = ["Arne Küderle <arne.kuederle@fau.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gaitmap-challenges = {path = "../gaitmap-challenges", develop = true, extras = ["visualization"]}
matplotlib = ">=3.6.3"
tpcp = ">=0.19.0"
click = ">=8.1.3"
toml = ">=0.10.2"
rich = ">=13.3.2"
trogon = "^0.4.0"

[tool.poetry.scripts]
gaitmap-bench = "gaitmap_bench._bench_runner:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''


