[tool.poetry]
name = "gaitmap-challenges"
version = "0.1.0"
description = "A set of benchmark challenges for IMU based human gait analysis"
authors = ["Arne Küderle <arne.kuederle@fau.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = ">=1.4.3"
scikit-learn = ">=1.0"
optuna = ">=3.0.0"
py-cpuinfo = "^9.0.0"
toml = "^0.10.2"
bokeh = {version = "^3.0.3", optional = true}
jupyter-bokeh = {version = "^3.0.5", optional = true}
gitpython = "^3.1.31"
gaitmap = {version = ">=2.2.0", extras = ["stats"]}
gaitmap-datasets = ">=0.14.0"
tpcp= ">=0.20.1"

[tool.poetry.extras]
visualization = ["bokeh"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
