[tool.poetry]
name = "gaitmap_algos"
version = "0.1.0"
description = "The reference entries using the gaitmap algorithms"
authors = ["Arne Küderle <arne.kuederle@fau.de>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gaitmap-bench = {path = "../../gaitmap-bench", develop = true}
gaitmap = {version = ">=2.2.3", extras = ["hmm"]}
gaitmap-mad = ">=2.2.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"

[tool.poe.tasks]
commit_lock_if_changed = { script = "_tasks:commit_lock_if_changed()" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
